Fix mobile layout overflowx

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@
     }
 
 body {
-    background: rgb(219, 219, 219);
+    background: rgb(177, 177, 177);
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
